--- a/scrapbook.ipynb
+++ b/scrapbook.ipynb
@@ -130,7 +130,6 @@
     "# same thing is on bottom of page so only find first instance of these classes\n",
     "pager_links = driver.find_elements(By.XPATH, '(//td[@class=\"rgPagerCell NumericPages\"])[1]//a')\n",
     "\n",
-    "\n",
     "# Loop through each page link and extract URLs\n",
     "for i in range(1, len(pager_links)):\n",
     "    pager_links[i].click()\n",
@@ -597,31 +596,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Legislation Details:\n",
-      "+----+-------------+-----------+------------+-----------+----------------+-----------------------------------------------------------------------------------------------------------------------------+--------+--------------------+--------------+------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------+---------------------------------------------------------------------------------------------------------------------------------+\n",
-      "| ID | File Number |   Type    | Introduced | On Agenda | Enactment Date |                                                            Name                                                             | Status |     In Control     | Final Action | Enactment Number |                                                                                                                                                                                                                                                                                                                                                             Title                                                                                                                                                                                                                                                                                                                                                             |     Sponsors      |                                                               URL                                                               |\n",
-      "+----+-------------+-----------+------------+-----------+----------------+-----------------------------------------------------------------------------------------------------------------------------+--------+--------------------+--------------+------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------+---------------------------------------------------------------------------------------------------------------------------------+\n",
-      "| 1  |   231273    | Ordinance | 12/12/2023 |           |    2/9/2024    | Settlement of Claims, Litigation - SFPUC Water Pipeline Break - Fillmore Street and Green Street - Not to Exceed $7,000,000 | Passed | Clerk of the Board |   2/9/2024   |      020-24      | Ordinance authorizing the San Francisco Public Utilities Commission (SFPUC) and the Office of the City Attorney to approve settlements of claims arising out of the September 10, 2023, break of the SFPUC's water transmission pipeline at the intersection of Fillmore and Green Streets for amounts exceeding $25,000 per claim, notwithstanding Administrative Code, Section 10.22, et. seq., but not to exceed $1,000,000 per claim, and delegating authority under Charter, Section 6.102(5) for the settlement of related litigation, if any, up to an aggregate total settlement amount not to exceed $7,000,000, subject to periodic reporting to the Board of Supervisors Government Audit and Oversight Committee. | Catherine Stefani | https://sfgov.legistar.com/LegislationDetail.aspx?ID=6452946&GUID=1D3F0E5B-B78B-49F8-BD05-F313A71CE055&Options=Advanced&Search= |\n",
-      "+----+-------------+-----------+------------+-----------+----------------+-----------------------------------------------------------------------------------------------------------------------------+--------+--------------------+--------------+------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------+---------------------------------------------------------------------------------------------------------------------------------+\n",
-      "\n",
-      "History:\n",
-      "+------------+-----+------------------------------------------+---------------------------------+--------+\n",
-      "|    Date    | Ver |                Action By                 |             Action              | Result |\n",
-      "+------------+-----+------------------------------------------+---------------------------------+--------+\n",
-      "|  2/9/2024  |  1  |                  Mayor                   |            APPROVED             |        |\n",
-      "| 1/30/2024  |  1  |           Board of Supervisors           |         FINALLY PASSED          |  Pass  |\n",
-      "| 1/23/2024  |  1  |           Board of Supervisors           |     PASSED ON FIRST READING     |  Pass  |\n",
-      "| 1/18/2024  |  1  | Government Audit and Oversight Committee | RECOMMENDED AS COMMITTEE REPORT |  Pass  |\n",
-      "| 12/15/2023 |  1  |            Clerk of the Board            |     REFERRED TO DEPARTMENT      |        |\n",
-      "| 12/12/2023 |  1  |                President                 |   ASSIGNED UNDER 30 DAY RULE    |        |\n",
-      "+------------+-----+------------------------------------------+---------------------------------+--------+\n"
+      "(1, '231273', 'Ordinance', '12/12/2023', '', '2/9/2024', 'Settlement of Claims, Litigation - SFPUC Water Pipeline Break - Fillmore Street and Green Street - Not to Exceed $7,000,000', 'Passed', 'Clerk of the Board', '2/9/2024', '020-24', \"Ordinance authorizing the San Francisco Public Utilities Commission (SFPUC) and the Office of the City Attorney to approve settlements of claims arising out of the September 10, 2023, break of the SFPUC's water transmission pipeline at the intersection of Fillmore and Green Streets for amounts exceeding $25,000 per claim, notwithstanding Administrative Code, Section 10.22, et. seq., but not to exceed $1,000,000 per claim, and delegating authority under Charter, Section 6.102(5) for the settlement of related litigation, if any, up to an aggregate total settlement amount not to exceed $7,000,000, subject to periodic reporting to the Board of Supervisors Government Audit and Oversight Committee.\", 'Catherine Stefani', 'https://sfgov.legistar.com/LegislationDetail.aspx?ID=6452946&GUID=1D3F0E5B-B78B-49F8-BD05-F313A71CE055&Options=Advanced&Search=')\n",
+      "Legislation Details\n",
+      "--------------------\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "tuple indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 158\u001b[0m\n\u001b[1;32m    156\u001b[0m \u001b[38;5;66;03m# Example usage\u001b[39;00m\n\u001b[1;32m    157\u001b[0m file_number \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m231273\u001b[39m\u001b[38;5;124m'\u001b[39m  \u001b[38;5;66;03m# Replace with the file number you want to query\u001b[39;00m\n\u001b[0;32m--> 158\u001b[0m \u001b[43mprint_legislation_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_number\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[5], line 110\u001b[0m, in \u001b[0;36mprint_legislation_data\u001b[0;34m(file_number, db_name)\u001b[0m\n\u001b[1;32m    108\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLegislation Details\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    109\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m20\u001b[39m)\n\u001b[0;32m--> 110\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile Number:       \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mlegislation\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mfile_number\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    111\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mType:              \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlegislation[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    112\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIntroduced:        \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlegislation[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mintroduced\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: tuple indices must be integers or slices, not str"
      ]
     }
    ],
@@ -647,6 +643,8 @@
     "    details['title'] = driver.find_element(By.ID, \"ctl00_ContentPlaceHolder1_lblTitle2\").text\n",
     "    sponsors = driver.find_elements(By.CSS_SELECTOR, \"#ctl00_ContentPlaceHolder1_lblSponsors2 a\")\n",
     "    details['sponsors'] = ', '.join([sponsor.text for sponsor in sponsors])\n",
+    "    related_files = driver.find_elements(By.CSS_SELECTOR, \"#ctl00_ContentPlaceHolder1_lblRelatedFiles2 a\")\n",
+    "    details['related_files'] = ', '.join([related_files.text for related_file in related_files])\n",
     "    \n",
     "    # Extract history details\n",
     "    details['history'] = extract_history(driver)\n",
@@ -712,6 +710,7 @@
     "    # Fetch legislation details\n",
     "    c.execute('''SELECT * FROM legislation WHERE file_number = ?''', (file_number,))\n",
     "    legislation = c.fetchone()\n",
+    "    print(legislation)\n",
     "\n",
     "    # Fetch history details\n",
     "    c.execute('''SELECT date, ver, action_by, action, result FROM history WHERE legislation_id = \n",
@@ -726,10 +725,28 @@
     "\n",
     "    if legislation:\n",
     "        # Legislation details\n",
-    "        print(\"Legislation Details:\")\n",
-    "        legislation_headers = [\"ID\", \"File Number\", \"Type\", \"Introduced\", \"On Agenda\", \"Enactment Date\", \"Name\", \n",
-    "                               \"Status\", \"In Control\", \"Final Action\", \"Enactment Number\", \"Title\", \"Sponsors\", \"URL\"]\n",
-    "        print(tabulate([legislation], headers=legislation_headers, tablefmt=\"pretty\"))\n",
+    "        #print(\"Legislation Details:\")\n",
+    "        #legislation_headers = [\"ID\", \"File Number\", \"Type\", \"Introduced\", \"On Agenda\", \"Enactment Date\", \"Name\", \n",
+    "        #                       \"Status\", \"In Control\", \"Final Action\", \"Enactment Number\", \"Title\", \"Sponsors\", \"URL\"]\n",
+    "        #print(tabulate([legislation], headers=legislation_headers, tablefmt=\"pretty\"))\n",
+    "        # Display the data\n",
+    "        # Print each legislation's details in a readable format\n",
+    "        print(\"Legislation Details\")\n",
+    "        print(\"-\" * 20)\n",
+    "        print(f\"File Number:       {legislation['file_number']}\")\n",
+    "        print(f\"Type:              {legislation['type']}\")\n",
+    "        print(f\"Introduced:        {legislation['introduced']}\")\n",
+    "        print(f\"On Agenda:         {legislation['on_agenda']}\")\n",
+    "        print(f\"Enactment Date:    {legislation['enactment_date']}\")\n",
+    "        print(f\"Name:              {legislation['name']}\")\n",
+    "        print(f\"Status:            {legislation['status']}\")\n",
+    "        print(f\"In Control:        {legislation['in_control']}\")\n",
+    "        print(f\"Final Action:      {legislation['final_action']}\")\n",
+    "        print(f\"Enactment Number:  {legislation['enactment_number']}\")\n",
+    "        print(f\"Title:             {legislation['title']}\")\n",
+    "        print(f\"Sponsors:          {legislation['sponsors']}\")\n",
+    "        print(f\"URL:               {legislation['url']}\\n\\n\")\n",
+    "        #print(\"\\n\" + \"=\" * 40 + \"\\n\")\n",
     "\n",
     "        # History details\n",
     "        if history:\n",
